# playto-task

./: EXPLAINER.md  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml  test_concurrency.py
backend/payouts/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/payouts/management/commands/: seed_data.py
backend/payouts/migrations/: 0001_initial.py  0002_integrity_constraints.py  0003_money_check_constraints.py
backend/playto/: settings.py  urls.py  wsgi.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
