[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-rest-framework>=0.1.0",
    "psycopg>=3.3.3",
    "redis>=7.4.0",
]
